fixed icon alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
     background-color: #c6bbab;
     padding: 2rem;
